# api-framework

./: README.md  pyproject.toml  requirements.txt
api_framework/: __init__.py  assertions.py  client.py  config.py  logger.py  reporting.py
api_framework/config/: dev.json
tests/: test_example.py
