[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-framework"
version = "0.1.0"
description = "Python API Testing Automation Framework"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]